--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ POLL_INTERVAL_SECONDS=300
 TELEGRAM_CHANNEL_URL=https://t.me/s/pat_cherkasyoblenergo
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:me@example.com
+TZ=Europe/Kyiv
