--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "@types/web-push": "^3.6.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
